package ju.subrata_biswas_002511002013.projectmanagement;

public enum Designation {
    PROJECT_MANAGER,
    SOFTWARE_ENGINEER,
    TEST_ENGINEER,
    BUSINESS_ANALYST,
    DEVOPS_ENGINEER,
    MAINTENANCE_ENGINEER
}