package ju.subrata_biswas_002511002013.projectmanagement;

public enum ProjectStage {
    REQUIREMENT,
    FEASIBILITY,
    TESTING,
    DEPLOYMENT,
    MAINTENANCE
}